--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -4,7 +4,7 @@
     "title": "PaperSync Exam Management",
     "description": "2nd year software project.Exam Paper Management & Resource Person Payment System is a full-stack platform developed to streamline exam paper workflows, subject assignments, user management, and payment coordination",
     "technologies": ["React", "Spring Boot", "MySQL"],
-    "githubLink": "https://lnkd.in/ga68SYS2 ",
+    "githubLink": "https://github.com/Jaynejay/CodeRella-Project",
     "demoLink": "https://www.linkedin.com/posts",
     "image": "/paper.png"
   },
